--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: 100vh;
     box-sizing: border-box;
     margin: 0;
+    font-family: 'Arial';
 }
 h1, p {
     color: rgb(33, 33, 33);
